# A2

./: README.md  pyproject.toml
docs/: 00-architecture.md  00-master-plan-revision.md  00-master-plan.md  01-agent-loop.md  01-architecture.md  01-data-models.md  02-foundation-services.md  02-mod-llm.md  02-tool-system.md  03-knowledge-pipeline.md  03-layered-memory.md  03-mod-env.md  04-agent-orchestration.md  04-mod-memory.md  04-skill-system.md  05-context-management.md  05-deployment.md  05-mod-skills.md  06-llm-provider.md  06-mod-planner.md  07-mod-mcp.md  07-planner.md  08-mod-context.md  08-subagent.md  09-mcp-integration.md  09-mod-agent.md  10-bollydog-integration-conventions.md  10-mod-config.md  11-configuration.md  11-dev-plan.md  12-bollydog-modifications.md  13-file-structure.md  14-verification.md  15-command-separation.md  A1-open-questions.md  A2-feature-reference.md
